--- a/06-samples_precision.Rmd
+++ b/06-samples_precision.Rmd
@@ -100,10 +100,10 @@ knitr::include_graphics("ch_samples_precision/images/sampling_dist.png")
 
 ## Precision indices
 
-The most common way of referring to the width of this distribution of sample means is with the term standard error. Standard error is simply the standard deviation of the sample means. We calculate the standard error of the mean  using Formula \@ref(eq:samplesechnext) below. We use $k$ in the formula to refer to the number of sample means in the distribution.  
+The most common way of referring to the width of this distribution of sample means is with the term standard error. Standard error is simply the standard deviation of the sample means. We calculate the standard error of the mean  using Formula \@ref(eq:samplesechnext) below. We use $K$ in the formula to refer to the number of sample means in the distribution (i.e., $K = \infty$). Note that it doesn't really make sense to divide by infinity (i.e., $\infty$) so statistician's don't normally express the standard deviation of this distribution using the formula below - instead they talk about the **expected value** for the standard deviation. But for learning purposes - we present the formula below as means to bridge this learning with past learning.
 
 \begin{equation} 
-\sigma_{\bar{x}} = \sqrt{\frac{\sum{(\bar{x} - \bar{\bar{x}})^2}}{k}}
+\sigma_{\bar{x}} = \sqrt{\frac{\sum{(\bar{x} - \bar{\bar{x}})^2}}{K}}
       (\#eq:samplesechnext)
 \end{equation} 
 
@@ -112,7 +112,7 @@ Notice that the formula for standard error is actually just the formula for stan
 Often we will not talk about standard error but rather the variance of the distribution of sample means. When we do so, we are talking about the same thing - the variability in sample means - but using different units. You can see that the formula for the variance of sample means, see Formula \@ref(eq:samplevarchnext) below, is just a squared version of the standard error equation, Formula \@ref(eq:samplesechnext) above.
 
 \begin{equation} 
-\sigma_{\bar{x}}^2 = \frac{\sum{(\bar{x} - \bar{\bar{x}})^2}}{k}
+\sigma_{\bar{x}}^2 = \frac{\sum{(\bar{x} - \bar{\bar{x}})^2}}{K}
       (\#eq:samplevarchnext)
 \end{equation} 
 
