--- a/packages.bib
+++ b/packages.bib
@@ -19,7 +19,7 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 0.22},
+  note = {R package version 0.23},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
@@ -27,7 +27,7 @@
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
   year = {2021},
-  note = {https://broom.tidymodels.org/, https://github.com/tidymodels/broom},
+  note = {https://broom.tidymodels.org/},
 }
 
 @Manual{R-cocor,
@@ -104,7 +104,7 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.33},
+  note = {R package version 1.34},
   url = {https://yihui.org/knitr/},
 }
 
