--- a/08-qualtrics.Rmd
+++ b/08-qualtrics.Rmd
@@ -1066,7 +1066,9 @@ glimpse(analytic_data_survey)
 
 ### Qualtrics
 
-* University of Guelph library [Qualtrics FAQ page](https://www.lib.uoguelph.ca/working-data/data-collection-surveys/qualtrics-frequently-asked-questions)
+* University of Guelph [Qualtrics Login page](https://www.lib.uoguelph.ca/working-data/data-collection-surveys)
+
+* University of Guelph [Qualtrics FAQ page](https://www.lib.uoguelph.ca/working-data/data-collection-surveys/qualtrics-frequently-asked-questions)
 
 
 ### Surveys
