--- a/packages.bib
+++ b/packages.bib
@@ -118,9 +118,9 @@
 @Manual{R-MBESS,
   title = {MBESS: The MBESS R Package},
   author = {Ken Kelley},
-  year = {2020},
-  note = {R package version 4.8.0},
-  url = {http://nd.edu/~kkelley/site/MBESS.html},
+  year = {2021},
+  note = {R package version 4.8.1},
+  url = {https://www3.nd.edu/~kkelley/site/MBESS.html},
 }
 
 @Manual{R-purrr,
